# HM-V2

./: .gitignore  AdbPairDialogFragment.java  AdbpairActivity.java  AppConstants.java  DebugActivity.java  ExecEngine.java  GamesFragmentActivity.java  Hypers.java  HypersBinderWrapper.java  HypersProvider.java  HypersRemoteProcess.java  HypersServiceConnection.java  HypersServiceConnections.java  HypersSettings.java  MainsFragmentActivity.java  MultiCoreGraphView.java  NativeLoader.java  PluginsImage.kt  RuncmdActivity.java  SecurityChecker.java  SegmentedButton.java  ShizukuUtil.java  StarterActivity.java  StarterActivityActivity.java  StarterHypers.java  TaskActivity.java  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: starter_hypers
app/src/main/assets/data/: env.sh
app/src/main/assets/js/: hypers-manager.js  hypers.js  karnelsu.js  loader.js
app/src/main/cpp/: CMakeLists.txt  adb_pairing.cpp  helper.cpp  misc.cpp  starter.cpp  starter_hypers.cpp
app/src/main/java/com/hypers/hm/: AdbcommandActivity.java  AdbpairActivity.java  AddedActivity.java  BatteryView.java  BlurBuilder.java  ChipsetDatabase.kt  CmdexecActivity.java  CmdpluginsActivity.java  CpuInfo.java  DebugActivity.java  EditActivity.java  ExecEngine.java  FileUtil.java  GamesFragmentActivity.java  HypersApplication.java  HypersManagerProvider.kt  HypersRemoteProcess.java  HypersSystemProperties.java  HypersmodeActivity.java  ImageHelper.kt  ListeditActivity.java  LoadingBooster.java  MainActivity.java  MainsFragmentActivity.java  Manifest.java  PluginsActivity.java  PrivacypluginsActivity.java  PrivilegeDialog.java  RuncmdActivity.java  SetpackageActivity.java  SettingsFragmentActivity.java  ShizukuUtil.java  SketchLogger.java  SketchwareUtil.java  SlideButton.java  StarterActivityActivity.java  SystemServiceHelper.java  TaskActivity.java  TerminalActivity.java  WebuiActivity.java  (+2 more)
app/src/main/java/com/hypers/hm/adb/: AdbClient.kt  AdbException.kt  AdbKey.kt  AdbMdns.kt  AdbMessage.kt  AdbPairingClient.kt  AdbPairingService.kt  AdbProtocol.kt
app/src/main/java/com/hypers/hm/api/: BinderContainer.java  HypersApiConstants.java
app/src/main/java/com/hypers/hm/authorization/: AuthorizationManager.kt  RequestPermissionActivity.kt
app/src/main/java/com/hypers/hm/bridge/: HypersAppBridge.java  HypersBridgeReceiver.java  HypersPairingManager.java  HypersTcpManager.java
app/src/main/java/com/hypers/hm/broadcast/: NotifyReceiver.java  ResetReceiver.java  ShellReceiver.java
app/src/main/java/com/hypers/hm/debug/: ADB.java  AdbMdns.java  AdbMessage.java  DaemonClient.java  HypersDaemon.java
app/src/main/java/com/hypers/hm/ktx/: Context.kt  Log.kt  String.kt
app/src/main/java/com/hypers/hm/model/: ServiceStatus.kt
app/src/main/java/com/hypers/hm/modelUi/: BatteryBarView.java  ROGPanel.java
app/src/main/java/com/hypers/hm/receiver/: BootCompleteReceiver.kt  HypersReceiver.kt
app/src/main/java/com/hypers/hm/rish/: FileDescriptors.java  Rish.java  RishConfig.java  RishConstants.java  RishHost.java  RishService.java  RishTerminal.java
app/src/main/java/com/hypers/hm/server/: ClientManager.java  ClientRecord.java  ConfigManager.java  ConfigPackageEntry.java  IHypersApplication.java  IHypersService.java  IHypersServiceConnection.java  IRemoteProcess.java  RemoteProcessHolder.java
app/src/main/java/com/hypers/hm/service/: BootReceiver.java  CrosshairService.java  DpiServiceUtils.java  FloatingService.java  GyroService.java  HypersPairService.java  NetworkBoosterService.java  ProBoosterService.java  StopBoosterReceiver.java
app/src/main/res/anim/: fade_in.xml
app/src/main/res/drawable/: anchor.xml  background_list_apps.xml  bg.xml  bg_graph.xml  bg_search_list.xml  clickriple.xml  cross1.xml  cross2.xml  cross3.xml  cross4.xml  cross5.xml  custom_progressbar.xml  custom_scrollbar.xml  custom_scrollbar_track.xml  custom_seekbar.xml  custom_thumb.xml  ic_battery_0.xml  ic_battery_100.xml  ic_battery_25.xml  ic_battery_50.xml  ic_battery_75.xml  ic_info_clock.xml  ic_info_cpu.xml  ic_info_fps.xml  ic_info_gpu.xml  ic_info_ram.xml  ic_info_temp.xml  kanan.xml  kiri.xml  tengah.xml  thumb.xml  thumb_bg.xml  track.xml
app/src/main/res/drawable-xhdpi/: icon_adb_round.xml  icon_ads_click.xml  icon_ads_click_round.xml  icon_android_adb.xml  icon_android_round.xml  icon_app_registration_round.xml  icon_app_settings_alt_round.xml  icon_arrow_back_ios.xml  icon_arrow_back_ios_round.xml  icon_arrow_back_ios_roundd.xml  icon_arrow_back_round.xml  icon_arrow_forward_ios_round.xml  icon_auto_awesome_mosaic_round.xml  icon_auto_mode_round.xml  icon_auto_stories_round.xml  icon_balance_round.xml  icon_blur_linear_ppi.xml  icon_blur_linear_round.xml  icon_bolt_round.xml  icon_bolt_round_hm.xml  icon_celebration_round.xml  icon_check_circle_round.xml  icon_chevron_right_round.xml  icon_circle_gyro.xml  icon_circle_round.xml  icon_close_round.xml  icon_code_round.xml  icon_code_round_adb.xml  icon_construction_round.xml  icon_content_copy_round.xml  icon_dashboard_customize_round.xml  icon_dashboard_round.xml  icon_data_thresholding_round.xml  icon_dehaze_round.xml  icon_delete_round.xml  icon_desktop_windows_round.xml  icon_double_arrow_hm.xml  icon_double_arrow_round.xml  icon_double_arroww.xml  icon_edit_note_round.xml  (+52 more)
app/src/main/res/layout/: _drawer_main.xml  adb_pair_dialog.xml  adbcommand.xml  adbpair.xml  added.xml  addlist.xml  apps.xml  area.xml  cmdexec.xml  cmdplugins.xml  debug.xml  dev.xml  edit.xml  float1.xml  float2.xml  floatingboost.xml  games_fragment.xml  gyro_layout.xml  hypersmode.xml  listedit.xml  main.xml  mains_fragment.xml  makro.xml  pair_layout.xml  perm.xml  plugin.xml  plugins.xml  plugzip.xml  ppc.xml  privacyplugins.xml  runcmd.xml  runtime.xml  sec.xml  sentuh.xml  set.xml  setedit.xml  setpackage.xml  settings_fragment.xml  starter_activity.xml  task.xml  (+2 more)
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+11 files in other folders)
